tests/errors/struct-unknown-field-type.ari
struct Wrapper {
  value: Missing,
}

fn main() -> i64 {
  return 0;
}
